--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -2,43 +2,46 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Hyperparameter Tuning using HyperDrive\n",
     "\n",
     "TODO: Import Dependencies. In the cell below, import all the dependencies that you will need to complete the project."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598531914256
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.core import Workspace, Experiment\n",
+    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+    "from azureml.widgets import RunDetails\n",
+    "from azureml.train.sklearn import SKLearn\n",
+    "from azureml.train.hyperdrive.run import PrimaryMetricGoal\n",
+    "from azureml.train.hyperdrive.policy import BanditPolicy\n",
+    "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
+    "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
+    "from azureml.train.hyperdrive.parameter_expressions import choice"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Dataset\n",
     "\n",
     "TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "ws = Workspace.from_config()\n",
-    "experiment_name = 'your experiment name here'\n",
-    "\n",
-    "experiment=Experiment(ws, experiment_name)"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598531917374
@@ -52,15 +55,55 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "ws = Workspace.from_config()\n",
+    "experiment_name = 'your experiment name here'\n",
+    "\n",
+    "experiment=Experiment(ws, experiment_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute name should contain only letters, digits, hyphen and should be 2-16 charachters long\n",
+    "compute_name = \"optCompute\"\n",
+    "try:\n",
+    "    trainCluster = ComputeTarget(ws, compute_name)\n",
+    "    print(f\"{compute_name} exists already\")\n",
+    "except:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"Standard_D2_V2\", max_nodes=5)\n",
+    "    trainCluster = ComputeTarget.create(ws, compute_name, compute_config)\n",
+    "trainCluster.wait_for_completion(show_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Create an early termination policy. This is not required if you are using Bayesian sampling.\n",
+    "early_termination_policy = BanditPolicy(evaluation_interval=1, slack_factor=0.2, delay_evaluation=5)\n",
+    "\n",
+    "#TODO: Create the different params that you will be using during training\n",
+    "param_sampling = RandomParameterSampling({\"--C\": choice(1,2,3,4,5), \"--max_iter\": choice(80,100,120,150,170,200)})\n",
+    "\n",
+    "#TODO: Create your estimator and hyperdrive config\n",
+    "estimator = SKLearn(source_directory='./training', compute_target=trainCluster, entry_script='train.py')\n",
+    "\n",
+    "hyperdrive_run_config = HyperDriveConfig(estimator=estimator, policy=early_termination_policy, primary_metric_name=\"Accuracy\",\n",
+    "                                          hyperparameter_sampling=param_sampling,\n",
+    "                                         max_total_runs=20,\n",
+    "                                          primary_metric_goal=PrimaryMetricGoal.MAXIMIZE)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Hyperdrive Configuration\n",
-    "\n",
-    "TODO: Explain the model you are using and the reason for chosing the different hyperparameters, termination policy and config settings."
-   ],
    "metadata": {
     "collapsed": true,
     "gather": {
@@ -75,46 +118,16 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "## Hyperdrive Configuration\n",
+    "\n",
+    "TODO: Explain the model you are using and the reason for chosing the different hyperparameters, termination policy and config settings."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# TODO: Create an early termination policy. This is not required if you are using Bayesian sampling.\n",
-    "early_termination_policy = <your policy here>\n",
-    "\n",
-    "#TODO: Create the different params that you will be using during training\n",
-    "param_sampling = <your params here>\n",
-    "\n",
-    "#TODO: Create your estimator and hyperdrive config\n",
-    "estimator = <your estimator here>\n",
-    "\n",
-    "hyperdrive_run_config = <your config here>"
-   ],
-   "outputs": [],
-   "metadata": {
-    "gather": {
-     "logged": 1598544893076
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "#TODO: Submit your experiment"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598544897941
@@ -128,17 +141,40 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: Submit your experiment\n",
+    "#TODO: Submit your experiment\n",
+    "hyperDrive_run = experiment.submit(hyperdrive_run_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RunDetails(hyperDrive_run).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_run = hyperDrive_run.get_best_run_by_primary_metric()\n",
+    "best_run_metrics = best_run.get_metrics()\n",
+    "\n",
+    "print('Best Run Id: ', best_run.id)\n",
+    "print('\\n Accuracy:', best_run_metrics['Accuracy'])\n",
+    "print('\\n Regularization Strength:',best_run_metrics['Regularization Strength:'])\n",
+    "print('\\n Max Iterations:',best_run_metrics['Max iterations:'])"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Run Details\n",
-    "\n",
-    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
-    "\n",
-    "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
-   ],
    "metadata": {
     "collapsed": true,
     "gather": {
@@ -153,13 +189,18 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "## Run Details\n",
+    "\n",
+    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
+    "\n",
+    "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598546648408
@@ -173,22 +214,22 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Best Model\n",
     "\n",
     "TODO: In the cell below, get the best model from the hyperdrive experiments and display all the properties of the model."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598546650307
@@ -202,15 +243,19 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    " #Code below registers the best model with the information of Metrics\n",
+    "model = best_run.register_model(model_name='HyperDrive_HighAccuracy', model_path='outputs/', \n",
+    "                                properties={'Accuracy': best_run_metrics['Accuracy'],\n",
+    "                                            'Regularization Strength': best_run_metrics['Regularization Strength:'],\n",
+    "                                           'Max Iterations': best_run_metrics['Max iterations:']})"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "#TODO: Save the best model"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598546657829
@@ -224,17 +269,14 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: Save the best model"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Model Deployment\n",
-    "\n",
-    "Remember you have to deploy only one of the two models you trained but you still need to register both the models. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
-    "\n",
-    "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
-   ],
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -246,45 +288,53 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "## Model Deployment\n",
+    "\n",
+    "Remember you have to deploy only one of the two models you trained but you still need to register both the models. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
+    "\n",
+    "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO: In the cell below, send a request to the web service you deployed to test it."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO: In the cell below, print the logs of the web service and delete the service"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Submission Checklist**\n",
     "- I have registered the model.\n",
@@ -294,13 +344,12 @@
     "- I have taken a screenshot showing the model endpoint as active.\n",
     "- The project includes a file containing the environment details.\n",
     "\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
